--- a/head.html
+++ b/head.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Switch Clicker 🥪">
     <meta name="clicks" content="0">
     <meta name="goal" content="100">
-    <meta http-equiv="refresh" content="1; url=https://localhost-four.github.io/switch/">
+    <!-- <meta http-equiv="refresh" content="1; url=https://localhost-four.github.io/switch/"> -->1
 
     <meta property="og:title" content="Switch">
     <meta property="og:description" content="Click to increase your score!">
