--- a/head.html
+++ b/head.html
@@ -9,8 +9,6 @@
     <meta name="description" content="Switch Clicker 🥪">
     <meta name="clicks" content="0">
     <meta name="goal" content="100">
-    <!-- <meta http-equiv="refresh" content="1; url=https://localhost-four.github.io/switch/"> -->1
-
     <meta property="og:title" content="Switch">
     <meta property="og:description" content="Click to increase your score!">
     <meta property="og:image" content="favicon.ico">
@@ -90,7 +88,6 @@
     </script>
 
     <meta name="click-button" content='<button onclick="incrementClicks()">click!</button>'>
-    
+    <meta http-equiv="refresh" content="6; url=https://localhost-four.github.io/switch/head.html">
 </head>
-
 </html>
